syntax = "proto3";
package scheduler;

import "common.proto";

// Message for requesting the status of all connected executors
message CheckExecutorsRequest {
}

// Message for responding to the executor status request
message CheckExecutorsResponse {
  // Map of executor URIs to boolean values indicating whether the executor is connected
  map<string, bool> executor_status = 1;
}


service GinSchedulerService {
    rpc RegisterExecutor(RegisterExecutorRequest) returns (RegisterExecutorResponse) {}
    rpc UnregisterExecutor(UnregisterExecutorRequest) returns (UnregisterExecutorResponse) {}
    rpc SubmitJob(SubmitJobRequest) returns (SubmitJobResponse) {}
    rpc check_executors(CheckExecutorsRequest) returns (CheckExecutorsResponse);
}

message RegisterExecutorRequest {
    string executor_uri = 1;
}

message RegisterExecutorResponse {
    bool success = 1;
}

message UnregisterExecutorRequest {
    string executor_uri = 1;
}

message UnregisterExecutorResponse {
    bool success = 1;
}

message SubmitJobRequest {
    repeated common.Stage plan = 1;
    string dataset_uri = 2;
    common.S3Configuration s3_conf = 3;
}

message SubmitJobResponse {
    bool success = 1;
    bytes result = 2;
}
